<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/logo_cativity"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView

        android:contentDescription="@string/description_content"
        android:layout_width="338dp"
        android:layout_height="400dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <Button

        android:id="@+id/button_start_picker"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:background="@color/blueGreen"
        android:text="@string/logo_button"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:text="@string/logo_ch1"
        android:textAlignment="center"
        android:id="@+id/text1_start"
        android:textColor="@color/blueGreen"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <TextView

        android:id="@+id/text2_start"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:text="@string/logo_ch2"

        android:textAlignment="center"
        android:textColor="@color/blueGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

</androidx.constraintlayout.widget.ConstraintLayout>