<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <LinearLayout
        android:id="@+id/hideLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/homeBefore_week"
            style="?android:attr/animateOnClick"
            android:layout_width="115dp"

            android:layout_height="50dp"


            android:text="@string/homeBeforeButton"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorSapphire"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="50dp"
           >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ProgressBar

                    style="?android:attr/progressBarStyleSmall"

                    android:layout_width="match_parent"

                    android:gravity="center_vertical"
                    android:layout_height="match_parent"

                    android:id="@+id/sch_progress_top"



                    />
                <TextView
                    android:id="@+id/textViewCurrentDate"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSapphire"

                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textView_currentWeek"
                    android:textAlignment="center"
                    android:textSize="17sp"

                    android:textColor="@color/colorSapphire"
                    android:text="Нижняя"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button

            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/homeNext_week"
            android:stateListAnimator="@null"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="115dp"
            android:layout_height="50dp"


            android:text="@string/homeNextButton"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorSapphire"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ProgressBar

            style="?android:attr/progressBarStyleSmall"

            android:layout_width="match_parent"

            android:layout_gravity="center_vertical"
            android:layout_height="80dp"

            android:id="@+id/sch_progress_week"



            />

        <TextView android:id="@+id/thereIsNoLessons"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorSapphire"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/thereIsNotLessons"
            android:gravity="center"
            >

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recycle_shc_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.cardview.widget.CardView>

</LinearLayout>